# postgrehs

./: .gitignore  HsPg.hs  MD5.hs  PostgreSQL.hs  SCGIpg.hs  postgrehs.cabal
schema-diff/: Acl.hs  Console.hs  Diff.hs  PgSchemaDiff.hs  Proc.hs  Str.hs  Table.hs  TestPostgres.hs  Trigger.hs  Util.hs  View.hs
working/: xfercn.hs  xferpq.hs  xferpq_test.hs  xferseq.hs  xfert.hs  xferx.hs
