Name:           postgrehs
Version:        0.1
Cabal-Version:  >= 1.18
License:        PublicDomain
Author:         r0ml
Synopsis:       Support for Postgres database (driver and utilities)
Build-Type:     Simple

Library
  Build-Depends:  preface-r0ml, base, bytestring, network, parsec
  Ghc-options:    -Wall
  Hs-Source-Dirs: .
  Default-Language: Haskell2010
  Exposed-Modules: PostgreSQL

Executable hspg
  Main-is: HsPg.hs
  Hs-Source-Dirs: .
  Ghc-options: -Wall
  Default-language:   Haskell2010
  Build-depends:      preface-r0ml, base, bytestring, network, parsec

Executable pg_schema_diff
  Build-Depends:  template-haskell, postgrehs, preface-r0ml, base, array, bytestring, text, parsec
  Main-Is:        PgSchemaDiff.hs
  Ghc-options:    -Wall 
  Hs-Source-Dirs: schema-diff .
  Default-Language: Haskell2010

Executable test_postgres
  Build-Depends:  template-haskell, base, array, bytestring, text, postgrehs, preface-r0ml, parsec
  Main-Is:        TestPostgres.hs
  Ghc-options:    -Wall 
  Hs-Source-Dirs: schema-diff .
  Default-Language: Haskell2010
