Name:           postgrehs
Version:        0.1
Cabal-Version:  >= 1.18
License:        PublicDomain
Author:         r0ml
Synopsis:       Support for Postgres database (driver and utilities)
Build-Type:     Simple

Library
  Build-Depends:  preface
  Ghc-options:    -Wall -threaded
  Hs-Source-Dirs: .
  Default-Language: Haskell2010
  Exposed-Modules: PostgreSQL
  Default-Extensions: NoImplicitPrelude

Executable hspg
  Main-is: HsPg.hs
  Hs-Source-Dirs: .
  Ghc-options: -Wall -threaded
  Default-language:   Haskell2010
  Default-Extensions: NoImplicitPrelude
  Build-depends:      preface, postgrehs

Executable pg_schema_diff
  Build-Depends:  postgrehs, preface
  Main-Is:        PgSchemaDiff.hs
  Ghc-options:    -Wall -threaded
  Hs-Source-Dirs: schema-diff .
  Default-Language: Haskell2010
  Default-Extensions: NoImplicitPrelude

Executable test_postgres
  Build-Depends:  postgrehs, preface
  Main-Is:        TestPostgres.hs
  Ghc-options:    -Wall -threaded
  Hs-Source-Dirs: schema-diff .
  Default-Language: Haskell2010
  Default-Extensions: NoImplicitPrelude

Executable scgipg
  Build-Depends: postgrehs, preface
  Main-Is:  SCGIpg.hs
  Ghc-options: -Wall -threaded
  Hs-Source-Dirs: .
  Default-Language: Haskell2010
  Default-Extensions: NoImplicitPrelude

